# Deep-CNN_Classifier

./: .gitignore  README.md  dvc.yaml  init_setup.sh  params.yaml  requirements.txt  requirements_dev.txt  scores.json  setup.cfg  setup.py  template.py
configs/: config.yaml
prediction_service/: app.py
research/: stage01.ipynb  stage02.ipynb  stage_03.ipynb  stage_04.ipynb  stage_05.ipynb  trails.ipynb
research/mlflow/: mlflow_example.py
src/deepClassifier/: __init__.py
src/deepClassifier/components/: __init__.py  data_ingestion.py  evaluation.py  prepare_base_model.py  prepare_callback.py  training.py
src/deepClassifier/config/: configuration.py
src/deepClassifier/constants/: __init__.py
src/deepClassifier/entity/: __init__.py  config_entity.py
src/deepClassifier/pipeline/: stage_01_data_ingestion.py  stage_02_prepare_base_model.py  stage_03_training.py  stage_04_evaluation.py
src/deepClassifier/utils/: common.py
tests/unit/: test_utils.py
