#This file contains metadata of the project

[metadata]
license = MIT
license_file = LICENSE
classifier =
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent

[options]
install_requires =
    ensure==1.0.2
python_requires = >=3.7    

[options.extras_require]
testing =           #Common packages used for testing
    pytest>=7.1.3   #pytest is a tool that automatically finds tests you've written, runs the tests, and reports the results
    mypy>=0.971     #Check typing errors
    flake8>=5.0.4   #Checks for mistakes like extra whitespaces
    tox>=3.25.1     #Create different working environments and test app locally
    black>=22.8.0   #Formatting applications to check if it is following Python structure

[options.package_data]
deepClassifier = py.typed       
  
[flake8]
max-line-length = 160
exclude = __init__.py